<resources>
    <string name="app_name">CriminalIntent</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--ciminal的标题输入提醒-->
    <string name="hint_criminal_title">请输入犯错的标题</string>

    <!--ciminal的标题-->
    <string name="criminal_title">标题</string>
    <!--ciminal的描述-->
    <string name="criminal_description">描述</string>
    <!--ciminal是否解决-->
    <string name="criminal_solved">是否解决?</string>

    <!--dialog日期-->
    <string name="dialog_fragment_date">选择日期</string>
    <!--dialog确认按钮-->
    <string name="dialog_fragment_ok">确定</string>

    <!--timepicker按钮-->
    <string name="exercise_timepicker">TimePicker</string>
    <!--onebutton-->
    <string name="exercise_onebutton">onebutton</string>

    <!--仿美团-->
    <string name="good_dishes">美食</string>
    <string name="main_tab1">全城</string>
    <string name="main_tab2">离我最近</string>
    <string name="main_tab3">筛选</string>
    <string name="title_activity_multi_listview">MultiListviewActivity</string>
    <string name="title_activity_builder">BuilderActivity</string>
    <string name="title_activity_observer">ObserverActivity</string>
    <string name="title_activity_project_observer">ProjectObserverActivity</string>
    <string name="title_activity_extends">ExtendsActivity</string>
    <string name="title_activity_xml">XmlActivity</string>
    <string name="title_activity_dialog_resume">DialogResumeActivity</string>
    <string name="title_activity_switch_button">SwitchButtonActivity</string>
    <string name="title_activity_web_view">WebViewActivity</string>
    <string name="title_activity_test_launch">TestLaunchActivity</string>
    <string name="title_activity_fresco">FrescoActivity</string>
    <string name="title_activity_rx_java">RxJavaActivity</string>
    <string name="title_activity_animation">AnimationActivity</string>
    <string name="title_activity_advance_anim">AdvanceAnimActivity</string>
    <string name="title_activity_file">FileActivity</string>
</resources>
