<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/criminal_title"
        style="?android:listSeparatorTextViewStyle"/>

    <View style="@style/divider" />

    <EditText
        android:id="@+id/fragment_criminal_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_criminal_title" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/criminal_description" />

    <View style="@style/divider" />

    <Button
        android:id="@+id/fragment_criminal_desription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_margin="20dp"/>

    <Button
        android:id="@+id/fragment_criminal_timepicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exercise_timepicker"
        android:layout_margin="20dp"/>

    <Button
        android:id="@+id/exercise_one_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exercise_onebutton"
        android:layout_margin="20dp"/>

    <CheckBox
        android:id="@+id/fragment_criminal_solved"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/criminal_solved"/>

</LinearLayout>
